# py17track

./: .bandit.yaml  .codeclimate.yml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  .whitesource  AUTHORS.md  AUTHORS.rst  LICENSE  Makefile  Pipfile  README.md  README.rst  coverage.xml  example.py  pylintrc  pyproject.toml  renovate.json  requirements_test.txt  setup.py
.github/: labeler.yml  pull_request_template.md  release-drafter.yml  stale.yml
.github/workflows/: ci.yaml  publish.yaml  release.yaml
.pytest_cache/v/cache/: nodeids
examples/: __init__.py  test_api.py  test_api_v1.py
py17track/: __init__.py  __version__.py  api.py  client.py  errors.py  exceptions.py  package.py  profile.py  track.py  version.py
py17track-old/: api.py  client.py  package.py  profile.py
py17track/data/: __init__.py  carrier.all.json
py17track/legacy/: __init__.py  profile.py
py17track/v1/: __init__.py  profile.py
script/: test
seventeentrack/: __init__.py  client.py  errors.py  package.py  profile.py  track.py  version.py
seventeentrack/data/: __init__.py  country.all.json
seventeentrack/legacy/: __init__.py  profile.py
seventeentrack/v1/: __init__.py  profile.py
tests/: __init__.py  common.py  const.py  test_api.py  test_client.py  test_profile.py  test_profile_legacy.py  test_profile_v1.py  test_tracking.py
tests-old/: test_api.py
tests-old/fixtures/: profile.py
tests/fixtures/: __init__.py  add_package_existing_response.json  add_package_response.json  authentication_failure_response.json  authentication_success_response.json  changeinfo_nonexistant_response.json  changeinfo_success_response.json  error_response.json  general.py  gettrackinfo_success_response.json  gettrackinfo_with_unknown_status_response.json  gettracklist_success_response.json  packages_response.json  packages_response_with_unknown_state.json  profile.py  register_existing_response.json  register_success_response.json  set_friendly_name_failure_response.json  set_friendly_name_response.json  summary_response.json  track.py
