[tool.poetry]
name = "py17track"
version = "2.2.6"
description = "A Simple Python API for 17track.net"
readme = "README.md"
authors = ["Aaron Bach <bachya1208@gmail.com>"]
license = "MIT"
repository = "https://github.com/bachya/py17track"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
aiohttp = "^3.6.2"
async-timeout = "^3.0.1"
attrs = "^19.3.0"
python = "^3.6.1"

[tool.poetry.dev-dependencies]
aresponses = "^1.1.1"
bandit = "^1.6.2"
black = "^19.10b0"
flake8 = "^3.7.9"
mypy = "^0.761"
pre-commit = "^2.0.1"
pydocstyle = "^5.0.2"
pylint = "^2.4.3"
pytest = "^5.3.5"
pytest-aiohttp = "^0.3.0"
pytest-cov = "^2.8.1"

[build-system]
requires = ["setuptools >= 35.0.2", "wheel >= 0.29.0", "poetry>=0.12"]
build-backend = "poetry.masonry.api"
